<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">朋友买啥</string>


    <string name="toolbar_login">登录</string>
    <string name="login_text">登录</string>
    <string name="friend_recommend">好友推荐</string>
    <string name="menu_settings">Settings</string>
    <string name="my_buy_record">我购买的宝贝</string>
    <string name="category">分类</string>
    <string name="recommend_reason">推荐理由</string>

    <string name="hint_username">淘宝账号</string>
	<string name="hint_pwd">密码</string>
</resources>
